--- a/firebase.json
+++ b/firebase.json
@@ -7,6 +7,8 @@
         "source": "**",
         "destination": "/index.html"
       }
-    ]
+    ],
+    "build:config": "firebase-ci createConfig",
+    "deploy": "firebase-ci deploy"
   }
 }
